add float pikcher

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <article>
       <header>
-        <h1>Джастин Бивер: С тех пор, как я узнал HTML, моя жизнь повернулась на 180 <sup> 0</sup> градусов</h1>
+        <h1>Джастин Бивер!: С тех пор, как я узнал HTML, моя жизнь повернулась на 180 <sup> 0</sup> градусов</h1>
         <p>Написал: Дамиан Вельгошик</p>
       </header>
       <p>Джастин Бивер сделал признание, которого никак не ожидали даже самые 
@@ -17,16 +17,29 @@
       канадца сообщают, что частные наставники Бивера, Райан Лослинг и 
       Николас Крейт, часто гуляют по Лос-Анджелесу, споря об инструменте 
       HTML-валидатор.</p>
-      <figure>
-        <img src="cat.jpg" alt="Кот Джастина Бивера доволен">
-        <figcaption>Счастливый кот Джастина Бивера</figcaption>
-      </figure>
-     <p>Бивер уже создал несколько сайтов и не намерен останавливаться на достигнутом.
-     <q>Я, вероятно, спою об HTML в своём следующем альбоме</q>, - добавил певец.</p>
-     <figure>
-        <img src="big.png" alt="Печенье Джастина Бивера ">
-        <figcaption>Печенье Джастина Бивера</figcaption>
-      </figure>
+<p>Бивер уже создал несколько сайтов и не намерен останавливаться на достигнутом.
+         <q>Я, вероятно, спою об HTML в своём следующем альбоме</q>, - добавил певец.</p>
+      <div class= "tabfig"> 
+        <div class= "fig">
+           <figure>
+           <img src="cat.jpg" alt="Кот Джастина Бивера доволен">
+           <figcaption>Счастливый кот Джастина Бивера</figcaption>
+         </figure>
+         </div>
+   <div class= "fig"> 
+         
+         <figure>
+           <img src="big.png" alt="Печенье Джастина Бивера ">
+           <figcaption>Печенье Джастина Бивера</figcaption>
+         </figure>
+</div>
+           <div class= "fig">
+ <figure>
+           <img src="печенье.jpg" alt="Кот Джастина Бивера доволен">
+           <figcaption>Печеньки кота</figcaption>
+         </figure>
+</div>
+      </div> 
     </article>
   </body>
 </html>
